@@ -4,6 +4,8 @@ Pending changes in the mainline
 Maintenance
 -----------
 
+* Fix unit test PngWriter.Color16Pattern on big-endian architectures,
+  as suggested by Etienne Mollier: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1041813
 * Prevent the leak of the full path of the source files in the binaries
 
 REST API
